gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail22366.d
version https://git-lfs.github.com/spec/v1
oid sha256:11ddcbf5f9d6f51290a0285894cd08cf72549cb5e360f8a45bf183dd2fdec4a0
size 1164
